--- a/CV.html
+++ b/CV.html
@@ -1168,10 +1168,16 @@
                 <div class="rightColMask"></div>
             </div>
                 <div class="poster">
-                    <p>Werner, L., Hußmann, K., Peitz, D., <b>Pierce, J. E</b>. (November, 2024). Mediengestütztes Eigentraining bei Aphasie mit aphasiatherapyonline.com: Erstellung und Erprobung der deutschen Version [Poster]. Gesellschaft für Aphasieforschung und -behandlung, Leipzig, Germany.</p>
+                    Lee, S. E., <b>Pierce, J. E.</b>, Hassan, F. H., Rose, M., & Hill, A. J. (2025, August). Malaysian health professionals’ views on adapting an Australian aphasia rehabilitation and self-management platform: A protocol [Poster presentation]. Malaysian Congress of Geriatric Medicine, Malacca, Malaysia.
                 </div>
                 <div class="poster">
-                    <p>Adikari, A., <b>Pierce, J. E.</b>, Pallewela, N., Wong, D., Kneebone, I., Ryan, B., Hernandez, N., Bremner, T., Bremner, S., Barron, K., Alahakoon, D., Rose, M. (July, 2024). The Mood Tracker app – a co-designed tool for aphasia-friendly monitoring and management of mood. [Poster]. International Aphasia Rehabilitation Conference, Brisbane, Australia.
+                    Lee, S. E., Hernandez, N. J., Hassan, F. H., <b>Pierce, J. E.</b>, Rose, M., & Hill, A. J. (2025, August). Rehabilitation and self-management support for aphasia and cognitive communication disability in Malaysia [Poster presentation]. Asian Oceanian Conference of Physical and Rehabilitation Medicine, Penang, Malaysia.
+                </div>
+                <div class="poster">
+                    <p>Werner, L., Hußmann, K., Peitz, D., <b>Pierce, J. E</b>. (November, 2024). Mediengestütztes Eigentraining bei Aphasie mit aphasiatherapyonline.com: Erstellung und Erprobung der deutschen Version [Poster presentation]. Gesellschaft für Aphasieforschung und -behandlung, Leipzig, Germany.</p>
+                </div>
+                <div class="poster">
+                    <p>Adikari, A., <b>Pierce, J. E.</b>, Pallewela, N., Wong, D., Kneebone, I., Ryan, B., Hernandez, N., Bremner, T., Bremner, S., Barron, K., Alahakoon, D., Rose, M. (July, 2024). The Mood Tracker app – a co-designed tool for aphasia-friendly monitoring and management of mood [Poster presentation]. International Aphasia Rehabilitation Conference, Brisbane, Australia.
                         </p>
                     <p>
                         <a href="papers/Mood Tracker poster.pdf">
@@ -1180,7 +1186,7 @@
                     </p>
                 </div>
                 <div class="poster">
-                  <p>Ottaway, G., Nicola, E., Stolwyk, R., Gracey, F., Evans, J., Blake, J., Kneebone, I., Power, E., Rose, A., Thomas, S., <b>Pierce, J.</b> & Wong, D. Identifying key concepts in measures of depression and anxiety used with acquired brain injury cohorts. [Poster presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.</p>
+                  <p>Ottaway, G., Nicola, E., Stolwyk, R., Gracey, F., Evans, J., Blake, J., Kneebone, I., Power, E., Rose, A., Thomas, S., <b>Pierce, J.</b> & Wong, D. Identifying key concepts in measures of depression and anxiety used with acquired brain injury cohorts [Poster presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.</p>
                 </div>
                 <div class="poster">
                     <p><b>Pierce,
@@ -1190,7 +1196,7 @@
                     L., Wilcox, C., Rose, M L. (June, 2022). <a
                     href="https://latrobeuni-my.sharepoint.com/:b:/g/personal/jpierce_ltu_edu_au/EdP48lzhOrFMmss_AOi1jFABD7-gaFwpX3hDG7aP-yKxQw?e=NRtl60"><i>Fatigue Levels
                     Across 30 Hours of Intensive Treatment - an Analysis of 144 Participants from
-                    the COMPARE Trial</i></a> [poster]. International Aphasia Research
+                    the COMPARE Trial</i></a> [Poster presentation]. International Aphasia Research
                     Conference, Philadelphia, USA.<b></b></p>
                     <a
                     href="https://latrobeuni-my.sharepoint.com/:b:/g/personal/jpierce_ltu_edu_au/EdP48lzhOrFMmss_AOi1jFABD7-gaFwpX3hDG7aP-yKxQw?e=NRtl60">
@@ -1205,7 +1211,7 @@
                     L., Wilcox, C., Rose, M L. (May, 2022). <a
                     href="https://latrobeuni-my.sharepoint.com/:b:/g/personal/jpierce_ltu_edu_au/EQf72o4MLURPmHHQ5Fb9zOsBsYHj2OzFd4a8YlYI5aenWA?e=TzVe6w"><i>How Fatiguing is
                     High Intensity Treatment for People with Aphasia? An Analysis of 144
-                    Participants from the COMPARE Trial</i></a><i>.</i> [poster]. Australasian Society for the Study
+                    Participants from the COMPARE Trial</i></a><i>.</i> [Poster presentation]. Australasian Society for the Study
                     of Brain Impairment Conference,<i> </i>Perth,
                     Australia.</p>
                     <p><a
