--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="Publications groups">
             <a href="https://doi.org/10.1080/02687038.2024.2410766" target="">
                 <div class="cardUpper" >
-                    <img src="images/aphasia_group.jpg" alt="" style="max-width: 100%;height: 100%;"/>
+                    <img src="images/aphasia_group.jpg" alt="" style="width: 100%;height: 100%;"/>
                 </div>
                 <div class="cardLower">
                     Groups run by people with aphasia, supported by clinicians
@@ -464,8 +464,8 @@
                     <img src="images/substudytimeline.png" alt="" style="height: 9rem;"/>
                 </div>
                 <div class="cardLower">
-                    Pilot study of lower intensity treatments
-                    <span>Distributing 30 hours of <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span> & <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span> over 5 weeks</span>
+                    Pilot study of lower intensity treatments<br>
+                    <span>Distributing 30 hours of <span style="color:#60ae46;">Constraint Induced Aphasia Therapy</span> & <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span> over 5 weeks</span>
                 </div>
             </a>
         </div>
@@ -476,7 +476,7 @@
                     <img src="images/compareschematic.png" alt="logo for the COMPARE aphasia trial" style="height: 7rem;justify-self: left;"/>
                 </div>
                 <div class="cardLower">
-                    COMPARE trial results
+                    COMPARE trial results<br>
                     <span style="font-size: 1rem;font-weight: 400;">
                         <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span> vs <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span> vs usual care.
                         <br>RCT of <span style="font-weight: 800;color:rebeccapurple">216</span> people.
