--- a/CV.html
+++ b/CV.html
@@ -194,7 +194,7 @@
             <span><span id="yearsPost">1</span> years post PhD</span>
             <span><span id="funding">$—</span> funding | <span id="fundingCIA">$—</span> as CIA </span>
             <span><span  id="pubsCount">—</span> publications </span>
-            <span><span>320</span> citations</span>
+            <span><span>390</span> citations</span>
             <span><i>h</i>-index <span>10</span></span>
             <!-- https://www.scopus.com/authid/detail.uri?authorId=57209304655 -->
         </p>
@@ -446,12 +446,23 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            
             <p>
               Aston, V., Eley, E., Wong, D., Hill, A., Carragher, M., Rose, M., Pitt, R., & <b>Pierce, J. E.</b> (In Press). Telerehabilitation delivery of multi-modality aphasia therapy (M-MAT Tele): A pilot feasibility trial. <i>International Journal of Telerehabilitation</i>.
             </p>
             <p>
                 Lee, S. E., Hernandez, N. J., Hassan, F. H., <b>Pierce, J. E.</b>, Rose, M. L., & Hill, A. J. (In Press). Rehabilitation and self-management support for people with aphasia and cognitive communication disability in Malaysia: a scoping review. <i>Disability and Rehabilitation.</i> <a href='https://doi.org/10.1080/09638288.2025.2540502'>https://doi.org/10.1080/09638288.2025.2540502</a>
             </p>
+            <p>
+              <b>Pierce, J. E.</b>, Hernandez, N. J., Alahakoon, D., Hill, A., Wong, D., Ryan, B., Copland, D., Power, E., Kneebone, I., Togher, L., Usherwood, T., Lindley, R. I., Shiggins, C., Cadilhac, D., Hill, K., Churilov, L., Worrall, L., Rietdijk, R., Sheldrick, T., … Rose, M. (In Press). Refining Methods of Experience-Based Co-Design for Application in Aphasia and Cognitive-Communication Disability. <i>American Journal of Speech-Language Pathology</i>. <a href="https://doi.org/10.1044/2025_AJSLP-25-00112">https://doi.org/10.1044/2025_AJSLP-25-00112</a>
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1044/2025_AJSLP-25-00112"></div>
+                    </td>
+                </tr>
+            </table>
             <p>
                 Zingelman, S., Wallace, S. J., Kim, J., Harvey, S., Rose, M. L., <b>Pierce, J. E.</b>, Bagot, K., & Cadilhac, D. A. (2025). Aphasia-specific or generic outcomes? a comparison of two health-related quality of life instruments for economic evaluations of aphasia treatments. <i>Quality of Life Research</i>. <a href="https://doi.org/10.1007/s11136-025-04040-8">https://doi.org/10.1007/s11136-025-04040-8</a>
             </p>
@@ -475,7 +486,27 @@
                     </tr>
             </table>
             <p>
-              Rose, M. L., Wilcox, C., Attard, M., <b>Pierce, J. E.</b>, Shiggins, C., Lanyon, L., Wong, D., Fenner, P., & Carragher, M. (early online). Acceptability, feasibility and preliminary efficacy of the Peer-led Hub-and-Spoke Community Aphasia Group program. Aphasiology, 0(0), 1–22. <a href="https://doi.org/10.1080/02687038.2024.2410766">https://doi.org/10.1080/02687038.2024.2410766</a>
+              Yıldız, M., Oğuz, Ö., & <b>Pierce, J. E.</b> (2025). A Pilot Study of Adapting and Assessing an Online Aphasia Therapy Software for Turkish Speakers: The Influence of Variables on Naming Accuracy. <i>International Journal of Language &amp; Communication Disorders, 60</i>(6), e70143. <a href="https://doi.org/10.1111/1460-6984.70143">https://doi.org/10.1111/1460-6984.70143</a>
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1111/1460-6984.70143"></div>
+                    </td>
+                </tr>
+            </table>
+            <p>
+              Shrubsole, K., Levine, R., Lynch, E., Briffa, C., <b>Pierce, J. E.</b>, Trebilcock, M., Do, C.-A., Wallace, S. J., & Power, E. (2025). Does a champion-led implementation toolkit have the potential to improve aphasia guideline adherence? Results from a feasibility study. <i>International Journal of Speech-Language Pathology, 0</i>(0), 1–16. <a href="https://doi.org/10.1080/17549507.2025.2573342">https://doi.org/10.1080/17549507.2025.2573342</a>
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/17549507.2025.2573342"></div>
+                    </td>
+                </tr>
+            </table>
+            <p>
+              Rose, M. L., Wilcox, C., Attard, M., <b>Pierce, J. E.</b>, Shiggins, C., Lanyon, L., Wong, D., Fenner, P., & Carragher, M. (2025). Acceptability, feasibility and preliminary efficacy of the Peer-led Hub-and-Spoke Community Aphasia Group program. Aphasiology, 39(9), 1165-1186. <a href="https://doi.org/10.1080/02687038.2024.2410766">https://doi.org/10.1080/02687038.2024.2410766</a>
             </p>
                 <table>
                     <tr>
@@ -488,7 +519,7 @@
                     </tr>
               </table>
             <p>
-              Hernandez, N. J., Pettigrove, K., Mellahn, K., Isaksen, J. K., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Carers in post-stroke aphasia: a scoping review of interventions and outcomes beyond communication partner training. <i>Disability and Rehabilitation, 47</i>(10). <a href="https://doi.org/10.1080/09638288.2024.2399221">https://doi.org/10.1080/09638288.2024.2399221</a>
+              Hernandez, N. J., Pettigrove, K., Mellahn, K., Isaksen, J. K., <b>Pierce, J. E.</b>, & Rose, M. L. (2025). Carers in post-stroke aphasia: a scoping review of interventions and outcomes beyond communication partner training. <i>Disability and Rehabilitation, 47</i>(10). <a href="https://doi.org/10.1080/09638288.2024.2399221">https://doi.org/10.1080/09638288.2024.2399221</a>
             </p>
             <table>
                     <tr>
@@ -508,7 +539,7 @@
                   </tr>
               </table>
             <p>
-                Pallewela, N., Alahakoon, D., Adikari, A., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Optimizing Speech Emotion Recognition with Machine Learning Based Advanced Audio Cue Analysis. <i>Technologies, 12</i>(7), Article 7. <a href="https://doi.org/10.3390/technologies12070111">https://doi.org/10.3390/technologies12070111</a>
+                Pallewela, N., Alahakoon, D., Adikari, A., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Optimizing Speech Emotion Recognition with Machine Learning Based Advanced Audio Cue Analysis. <i>Technologies, 12</i>(7):111. <a href="https://doi.org/10.3390/technologies12070111">https://doi.org/10.3390/technologies12070111</a>
             </p>
             <table>
                 <tr>
@@ -519,7 +550,7 @@
             </table>
 
             <p>
-              <b>Pierce, J. E.</b>, Hill, A. J., Wong, D., Pitt, R., & Rose, M. L. (2024). Adapting a group-based, multimodal aphasia treatment for telehealth – co-design of M-MAT Tele. <i>Disability and Rehabilitation: Assistive Technology, 20</i>(1). <a href="https://doi.org/10.1080/17483107.2024.2366423">https://doi.org/10.1080/17483107.2024.2366423</a>
+              <b>Pierce, J. E.</b>, Hill, A. J., Wong, D., Pitt, R., & Rose, M. L. (2025). Adapting a group-based, multimodal aphasia treatment for telehealth – co-design of M-MAT Tele. <i>Disability and Rehabilitation: Assistive Technology, 20</i>(1). <a href="https://doi.org/10.1080/17483107.2024.2366423">https://doi.org/10.1080/17483107.2024.2366423</a>
             </p>
             <table>
                         <tr>
@@ -555,7 +586,7 @@
                     </tr>
                 </table>
             <p>
-                Griffin-Musick, J., Harvey, S., <b>Pierce, J. E.</b>, Fahey, D., & Off, C. (2024). The “I” in ICAPs: examining treatment intensity under the microscope. <i>Aphasiology, 39</i>(1), 11-39. <a href="https://doi.org/10.1080/02687038.2024.2317920">https://doi.org/10.1080/02687038.2024.2317920</a>
+              Griffin-Musick, J., Harvey, S., <b>Pierce, J. E.</b>, Fahey, D., & Off, C. (2025). The “I” in ICAPs: examining treatment intensity under the microscope. <i>Aphasiology, 39</i>(1), 11-39. <a href="https://doi.org/10.1080/02687038.2024.2317920">https://doi.org/10.1080/02687038.2024.2317920</a>
             </p>
                 <table>
                     <tr>
