--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <rect id="svgBase" x="0" y="0" width="16" height="16" fill="url(#emailGradient)" />
                 </g>    
                 </svg>
-            <div class="externalLinkLabel">email me</div>
+            <div class="externalLinkLabel">email</div>
         </a>
     </div>    
 <!-- Profile -->
