Fix poster format

--- a/CV.html
+++ b/CV.html
@@ -1202,10 +1202,10 @@
                 <div class="rightColMask"></div>
             </div>
                 <div class="poster">
-                    Lee, S. E., <b>Pierce, J. E.</b>, Hassan, F. H., Rose, M., & Hill, A. J. (2025, August). Malaysian health professionals’ views on adapting an Australian aphasia rehabilitation and self-management platform: A protocol [Poster presentation]. Malaysian Congress of Geriatric Medicine, Malacca, Malaysia.
+                    <p>Lee, S. E., <b>Pierce, J. E.</b>, Hassan, F. H., Rose, M., & Hill, A. J. (2025, August). Malaysian health professionals’ views on adapting an Australian aphasia rehabilitation and self-management platform: A protocol [Poster presentation]. Malaysian Congress of Geriatric Medicine, Malacca, Malaysia.</p>
                 </div>
                 <div class="poster">
-                    Lee, S. E., Hernandez, N. J., Hassan, F. H., <b>Pierce, J. E.</b>, Rose, M., & Hill, A. J. (2025, August). Rehabilitation and self-management support for aphasia and cognitive communication disability in Malaysia [Poster presentation]. Asian Oceanian Conference of Physical and Rehabilitation Medicine, Penang, Malaysia.
+                    <p>Lee, S. E., Hernandez, N. J., Hassan, F. H., <b>Pierce, J. E.</b>, Rose, M., & Hill, A. J. (2025, August). Rehabilitation and self-management support for aphasia and cognitive communication disability in Malaysia [Poster presentation]. Asian Oceanian Conference of Physical and Rehabilitation Medicine, Penang, Malaysia.</p>
                 </div>
                 <div class="poster">
                     <p>Werner, L., Hußmann, K., Peitz, D., <b>Pierce, J. E</b>. (November, 2024). Mediengestütztes Eigentraining bei Aphasie mit aphasiatherapyonline.com: Erstellung und Erprobung der deutschen Version [Poster presentation]. Gesellschaft für Aphasieforschung und -behandlung, Leipzig, Germany.</p>
@@ -1548,7 +1548,7 @@
                     <li>German <b>(complete)</b></li>
                     <li>Hindi</li>
                     <li>Mandarin <b>(complete)</b></li>
-                    <li>Norwegian</li>
+                    <li>Norwegian <b>(complete)</b></li>
                     <li>European Portuguese <b>(complete)</b></li>
                     <li>Brazilian Portuguese <b>(complete)</b></li>
                     <li>Spanish <b>(complete)</b></li>
