Add Achini's paper

--- a/CV.html
+++ b/CV.html
@@ -446,6 +446,14 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            <p>Adikari, A., Alahakoon, D., Pallewela, N., <b>Pierce, J. E.</b>, Hernandez, N. J., & Rose, M. L. (2025). Reconstructing impaired language using generative AI for people with aphasia. <i>Scientific Reports, 15</i>(1), 40877. https://doi.org/10.1038/s41598-025-24725-x</p>
+           <table>
+                <tr>
+                    <td>
+                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1038/s41598-025-24725-x"></div>
+                    </td>
+                </tr>
+            </table>  
             <p>Lanyon, L., Shiggins, C., Wilcox, C., <b>Pierce, J. E.</b>, Wong, D., Attard, M., Carragher, M., Fenner, P., & Rose, M. (2025). Building community through engagement in a Hub-and-Spoke, Peer-led Community Aphasia Group program: The perspectives of participants with aphasia and their close others. <i>Disability and Rehabilitation,</i>1–21. <a href='https://www.tandfonline.com/doi/abs/10.1080/09638288.2025.2583075'>https://www.tandfonline.com/doi/abs/10.1080/09638288.2025.2583075</a></p>
           <table>
                 <tr>
