Add hyperlink tag

--- a/CV.html
+++ b/CV.html
@@ -446,7 +446,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-            <p>Adikari, A., Alahakoon, D., Pallewela, N., <b>Pierce, J. E.</b>, Hernandez, N. J., & Rose, M. L. (2025). Reconstructing impaired language using generative AI for people with aphasia. <i>Scientific Reports, 15</i>(1), 40877. https://doi.org/10.1038/s41598-025-24725-x</p>
+            <p>Adikari, A., Alahakoon, D., Pallewela, N., <b>Pierce, J. E.</b>, Hernandez, N. J., & Rose, M. L. (2025). Reconstructing impaired language using generative AI for people with aphasia. <i>Scientific Reports, 15</i>(1), 40877. <a href='https://doi.org/10.1038/s41598-025-24725-x'>https://doi.org/10.1038/s41598-025-24725-x</a></p>
            <table>
                 <tr>
                     <td>
