--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
                 </div>
             </a>
         </div>
+        <div class="Communication_Connect Co-Design aphasia technology Publications">
+            <a href="papers/Refining methods of EBCD Accepted.pdf" target="">
+                <div class="cardUpper" >
+                    <img src="images/commconnect.webp" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Co-Design methods for people with aphasia and TBI
+                </div>
+            </a>
+        </div>
         <div class="aphasia bilingual_tools Publications">
             <a href="https://doi.org/10.1111/1460-6984.70143" target="">
                 <div class="cardUpper" >
