--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
                 </div>
             </a>
         </div>
+        <div class="implementation aphasia clinical_guidelines Publications">
+            <a href="https://doi.org/10.1080/17549507.2025.2573342" target="">
+                <div class="cardUpper" >
+                    <img src="images/aphasiafriendlyinfo.webp" alt="" style="width: 102%;"/>
+                </div>
+                <div class="cardLower">
+                    Testing a toolkit to boost best-practice care in aphasia care
+                </div>
+            </a>
+        </div>
         <div class="Communication_Connect Co-Design aphasia technology Publications">
             <a href="papers/Refining methods of EBCD Accepted.pdf" target="">
                 <div class="cardUpper" >
@@ -255,10 +265,10 @@
                 </div>
             </a>
         </div>
-        <div class="aphasia bilingual_tools Publications">
+        <div class="aphasia bilingual_tools Publications"  style="border: 1px #f0f1f199 solid;">
             <a href="https://doi.org/10.1111/1460-6984.70143" target="">
                 <div class="cardUpper" >
-                    <img src="images/turkishATO.png" alt="" style="width: 102%;filter: contrast(0.7);"/>
+                    <img src="images/turkishATO.png" alt="" style="width: 102%;"/>
                 </div>
                 <div class="cardLower">
                     Adaptation of Aphasia Therapy Online to Turkish + pilot testing
