--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </a>
         </div>
         <div class="Tutorials Videos aphasia PALPA">
-            <a href="https://www.youtube.com/watch?v=tRHHD4KsFP4&list=PLhVDZD_iZSovSQYMDkxbHTajT8oRnkH4r" target="">
+            <a href="PALPAtutorials.html" target="">
                 <div class="cardUpper" style="align-content: flex-end;background: linear-gradient(135deg, rgba(123, 144, 182, 0.5), rgba(119, 166, 173, 0.5), rgba(113, 187, 130, 0.5), rgba(193, 156, 109, 0.5), rgba(169, 134, 160, 0.5));">
                     <img src="images/PALPAthumb.jpg" alt="thumbnails of PALPA tutorial videos" style="width: 75%;margin-bottom: -2%;"/>
                 </div> 
