--- a/PALPAtutorials.html
+++ b/PALPAtutorials.html
@@ -16,6 +16,11 @@
     <link href='https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700;800&display=swap' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .videothumb {
+            max-width: 60%;
+        }
+    </style>
 </head>
 <body>
     <a id="homeArrow" href="index.html">
@@ -52,23 +57,27 @@
 </div>
 
 <div class="light">
-    <h2 style="margin-bottom: 2rem;">Video Tutorials</h2>
     
     <div style="margin-bottom: 3rem;">
-        <h3 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 1: Overview of Psycholinguistic Models, Pros and Cons</h3>
-        <!-- <p style="text-align: justify; margin-bottom: 1rem;">
-            (Coming soon)
-        </p> -->
+        <h2 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 1: Overview of Psycholinguistic Models, Pros and Cons</h2>
+        <!-- <div style="text-align: center; margin-bottom: 1rem;">
+                
+        </div> -->
         <a href="https://www.youtube.com/watch?v=tRHHD4KsFP4" class="paperbutton" target="_blank" style="display: inline-block;opacity: 0.6; cursor: not-allowed;">
             <span style="font-size: 0.9rem;">(Coming soon)</span>
         </a>
     </div>
 
     <div style="margin-bottom: 3rem;">
-        <h3 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 2: The "PALPA Model" Explained - Normal Language Processing in Psycholinguistics </h3>
+        <h2 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 2: The "PALPA Model" Explained - Normal Language Processing in Psycholinguistics </h2>
         <p style="text-align: justify; margin-bottom: 1rem;">
         Orientation to the model, how each box functions in an unimpaired system.
         </p>
+        <div style="text-align: center; margin-bottom: 1rem;">
+            <a href="https://www.youtube.com/watch?v=tRHHD4KsFP4" target="_blank">
+                <img class="videothumb" src="images/thumbnails PALPA.png" alt="">
+            </a>
+        </div>
         <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
             <a href="https://www.youtube.com/watch?v=tRHHD4KsFP4" class="paperbutton" target="_blank" style="display: inline-block;">
                 Watch on YouTube
@@ -80,10 +89,15 @@
     </div>
 
     <div style="margin-bottom: 3rem;">
-        <h3 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 3: Semantics in the PALPA Model - what do we mean by "semantics"? </h3>
+        <h2 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 3: Semantics in the PALPA Model - what do we mean by "semantics"? </h2>
         <p style="text-align: justify; margin-bottom: 1rem;">
             In-depth explanation of the semantic system, how the brain organises conceptual knowledge and maps it to words.
         </p>
+        <div style="text-align: center; margin-bottom: 1rem;">
+            <a href="https://www.youtube.com/watch?v=hKIC6Rn3FEk" target="_blank">
+                <img class="videothumb"  src="images/thumbnails PALPA 2.png" alt="">
+            </a>
+        </div>
         <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
             <a href="https://www.youtube.com/watch?v=hKIC6Rn3FEk" class="paperbutton" target="_blank" style="display: inline-block;">
                 Watch on YouTube
@@ -95,10 +109,15 @@
     </div>
 
     <div style="margin-bottom: 3rem;">
-        <h3 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 4: Breakdowns in Speech & Auditory Comprehension</h3>
+        <h2 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 4: Breakdowns in Speech & Auditory Comprehension</h2>
         <p style="text-align: justify; margin-bottom: 1rem;">
         The effects of impairments to each process on the spoken comprehension and expression side of the model.
         </p>
+        <div style="text-align: center; margin-bottom: 1rem;">
+            <a href="https://www.youtube.com/watch?v=nstdur-AroE" target="_blank">
+                <img class="videothumb"  src="images/thumbnails PALPA spoken.png" alt="">
+            </a>
+        </div>
         <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
             <a href="https://www.youtube.com/watch?v=nstdur-AroE" class="paperbutton" target="_blank" style="display: inline-block;">
                 Watch on YouTube
@@ -110,10 +129,15 @@
     </div>
 
     <div style="margin-bottom: 3rem;">
-        <h3 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 5: Breakdowns in Reading and Writing</h3>
+        <h2 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 5: Breakdowns in Reading and Writing</h2>
         <p style="text-align: justify; margin-bottom: 1rem;">
             The effects of impairments to each process on the reading and writing side of the model.
         </p>
+        <div style="text-align: center; margin-bottom: 1rem;">
+            <a href="Explaining Acquired Dyslexia & Dysgraphia" target="_blank">
+                <img class="videothumb" src="images/thumbnails PALPA writing.png" alt="">
+            </a>
+        </div>
         <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
             <a href="Explaining Acquired Dyslexia & Dysgraphia" class="paperbutton" target="_blank" style="display: inline-block;">
                 Watch on YouTube
@@ -125,12 +149,14 @@
     </div>
 
     <div style="margin-bottom: 3rem;">
-        <h3 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 6:  Assessment using psycholinguistic models</h3>
-        <!-- <p style="text-align: justify; margin-bottom: 1rem;">
-        (Coming soon)
-        </p> -->
+        <h2 style="text-align: left; font-size: 1.3rem; margin-bottom: 1rem;">Video 6:  Assessment using psycholinguistic models</h2>
+        <div style="text-align: center; margin-bottom: 1rem;">
+            <!-- <div style="display: inline-flex; align-items: center; justify-content: center; width: min(90vw, 720px); height: 360px; border: 2px dashed #cfcfcf; border-radius: 0.75rem; color: #555; background: #f7f7f7;">
+                Thumbnail placeholder – replace with your video image
+            </div> -->
+        </div>
         <a href="#" class="paperbutton" target="_blank" style="display: inline-block; opacity: 0.6; cursor: not-allowed;">
-            Watch on YouTube <span style="font-size: 0.9rem;">(Coming soon)</span>
+            <span style="font-size: 0.9rem;">(Coming soon)</span>
         </a>
     </div>
 </div>
